--- a/fAbout.html
+++ b/fAbout.html
@@ -113,7 +113,7 @@ Recommended screen resolution 1280 x 1024.<br/>
 
 <div id="tabs-2">
 <h3>Changes in this release</h3>
- <object width="910" height="340" type="text/plain" data="cDocuments/Readme.txt" border="0"
+ <object width="910" height="340" type="text/plain" data="README.md" border="0"
    style="overflow: hidden;">
 </object> 
 </div>
