--- a/cEquation/cEqu017DrakeRev1.html
+++ b/cEquation/cEqu017DrakeRev1.html
@@ -290,6 +290,8 @@ function calcEquation() {
 Astronomer Sara Seager proposed a revised Drake equation that focuses on the search for planets with biosignature gases. These gases are produced by living organisms that can accumulate in a planet atmosphere to levels that can be detected with remote space telescopes.
 <br/><br/>
 Seager stresses,"We're not throwing out the Drake Equation, which is really a different topic," explaining, "Since Drake came up with the equation, we have discovered thousands of exoplanets. We as a community have had our views revolutionized as to what could possibly be out there. And now we have a real question on our hands, one that's not related to intelligent life: Can we detect any signs of life in any way in the very near future?"
+<br/><br/>
+<a href="https://io9.gizmodo.com/what-a-brand-new-equation-reveals-about-our-odds-of-fin-531575395">Further reading on the Seager equation.</a>
 
 </div>
 
