--- a/mMainExtApps.html
+++ b/mMainExtApps.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>Astrolab Add-ins ------------ [mAddIn]</title>
+<title>Astrolab External Internet Applications ------------ [mMainExtApps]</title>
 
 <!-- Load common environment -->
 <script src="fJscriptLib/jquery.js"></script>
@@ -61,7 +61,7 @@
 <table class="MenuTable" >
   <tr>
     <td style="width:50%;"><ul>
-      <li><a title="Chromoscope v1.4.6" href="www.chromoscope.net">Chromoscope v1.4.6 </a><br>
+      <li><a title="Chromoscope v1.4.6" href="http://www.chromoscope.net">Chromoscope v1.4.6 </a><br>
   </li>
     </ul>      </td>
     <td style="width:50%;">
@@ -86,6 +86,18 @@ Credits:
       <li><a href="http://astrog80.astro.cf.ac.uk/Planck/Chromoscope/">Chromoscope Planck v0.1.2</a></li>
          </ul></td>
     <td>Credits: Chris North</td>
+  </tr>
+  <tr>
+    <td><ul>
+      <li><a href="https://impact.ese.ic.ac.uk/ImpactEarth/ImpactEffectsMap/" target="_blank">Earth Impact effects (Cratering)</a></li>
+      </ul></td>
+    <td>The original Earth Impact Effects Program is still available to calculate the effects a given distance from an impact</td>
+  </tr>
+  <tr>
+    <td><ul>
+      <li><a href="http://purdue.edu/impactearth/" target="_blank">Impact Earth (Cratering)</a></li>
+      </ul></td>
+    <td>Impact: Earth! is a new, more visual and user-friendly update to our impact calculator, developed and hosted by Purdue University. </td>
   </tr>
   <tr>
     <td><ul>
@@ -114,7 +126,7 @@ Credits:
         </script>
       </td>
       <td style="width:50%"></td>
-      <td style="width:25%">mMainAddIn</td>
+      <td style="width:25%">mMainExtApps</td>
     </tr>
   </table>
 </footer>
