--- a/mMainAddIns.html
+++ b/mMainAddIns.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 
-<title>Astrolab Add-ins ------------ [mAddIn]</title>
+<title>Astrolab Add-ins ------------ [mMainAddIns]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
