--- a/mMainConversions.html
+++ b/mMainConversions.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Astrophysics Tools" />
-<meta name="Keywords" content="Astronomy, Cosmology, Astrophysics" />
-<meta name="Author" content="Alchymist" />
 
-
-<title>COS Astrolab Main Menu ------------ [mMain]</title>
+<title>Conversions Main Menu ------------ [mMainConversions]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -19,6 +16,11 @@
 <script src="fEnvironment.js"></script>
 
 <!-- End of common environment -->
+
+<!-- Above is Standard Header For All Application Pages -->
+
+<!-- Page Specific environment -->
+
 
 <style>
 body, html {
@@ -40,9 +42,6 @@ body, html {
 }
 </style>	
 
-<!-- Above is Standard Header For All Application Pages -->
-
-<!-- Page Specific environment -->
 <script>
 $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -51,22 +50,10 @@ $( function() {
     } );
   } );
 </script>
-<script> 
-
-
-function pageStart() {
-
-
-
-}
-
-
-</script>
-
 
 </head>
 
-<body onload="pageStart();">
+<body>
 	
 <div class="bgndImg">
 
