--- a/mMainExtApps.html
+++ b/mMainExtApps.html
@@ -6,6 +6,7 @@
 <title>Astrolab External Internet Applications ------------ [mMainExtApps]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -104,6 +105,12 @@ Credits:
       <li><a href="http://mgvez.github.io/jsorrery/" target="_blank">jsOrrery Solar System</a></li>
       </ul></td>
     <td>Credits: <a href="http://lab.la-grange.ca/en/jsorrery" title="La Grange" target="_blank">http://lab.la-grange.ca/en/jsorrery</a></td>
+  </tr>
+  <tr>
+    <td><ul>
+      <li><a href="http://www.eldacur.com/%7Ebrons/NerdCorner/StarGen/StarGen.html" target="_blank">Stargen Solar System Generator</a></li>
+      </ul></td>
+    <td>Simulates creation of solar systems</td>
   </tr>
 </table>
 <br/>
