--- a/mMainCalculations.html
+++ b/mMainCalculations.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Astrophysics Tools" />
-<meta name="Keywords" content="Astronomy, Cosmology, Astrophysics" />
-<meta name="Author" content="Alchymist" />
 
-
-<title>COS Astrolab Main Menu ------------ [mMain]</title>
+<title>Calculations Main Menu ------------ [mMainCalculations]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -19,6 +16,10 @@
 <script src="fEnvironment.js"></script>
 
 <!-- End of common environment -->
+
+<!-- Above is Standard Header For All Application Pages -->
+
+<!-- Page Specific environment -->
 	
 <style>
 body, html {
@@ -40,9 +41,7 @@ body, html {
 }
 </style>	
 
-<!-- Above is Standard Header For All Application Pages -->
 
-<!-- Page Specific environment -->
 <script>
 $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -51,21 +50,11 @@ $( function() {
     } );
   } );
 </script>
-<script> 
-
-
-function pageStart() {
-
-
-
-}
-
-</script>
 
 
 </head>
 
-<body onload="pageStart();" background-image: url("\fImageLib\Cosmos02.jpg");>
+<body>
 
 <div class="bgndImg">
 	
