--- a/mMainConstants.html
+++ b/mMainConstants.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Astrophysics Tools" />
-<meta name="Keywords" content="Astronomy, Cosmology, Astrophysics" />
-<meta name="Author" content="Alchymist" />
 
-
-<title>COS Astrolab Main Menu ------------ [mMain]</title>
+<title>Constants Main Menu ------------ [mMainConstants]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -17,8 +14,12 @@
 <link rel="stylesheet" href="fCss/fDefault.css" type="text/css" />
 
 <script src="fEnvironment.js"></script>
-
+	
 <!-- End of common environment -->
+
+<!-- Above is Standard Header For All Application Pages -->
+
+<!-- Page Specific environment -->
 	
 <style>
 body, html {
@@ -40,9 +41,7 @@ body, html {
 }
 </style>	
 
-<!-- Above is Standard Header For All Application Pages -->
 
-<!-- Page Specific environment -->
 <script>
 $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -51,23 +50,10 @@ $( function() {
     } );
   } );
 </script>
-<script> 
-
-
-function pageStart() {
-
-
-
-}
-
-
-
-</script>
-
 
 </head>
 
-<body onload="pageStart();">
+<body>
 
 <div class="bgndImg">
 	
