--- a/mMainMisc.html
+++ b/mMainMisc.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Astrophysics Tools" />
-<meta name="Keywords" content="Astronomy, Cosmology, Astrophysics" />
-<meta name="Author" content="Alchymist" />
 
-
-<title>COS Astrolab Main Menu ------------ [mMain]</title>
+<title>Misc. Main Menu ------------ [mMainMisc]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -23,6 +20,7 @@
 <!-- Above is Standard Header For All Application Pages -->
 
 <!-- Page Specific environment -->
+	
 <script>
 $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -31,38 +29,11 @@ $( function() {
     } );
   } );
 </script>
-<script> 
-
-
-function pageStart() {
-
-displayVersion();
-
-}
-
-function displayVersion() {
-
-    var menu = document.getElementById("menuCell");
-    menu.innerHTML = APP_VERSION;
-
-/* 
-possible alternative route add a cell on end of row with text
-var firstRow = document.getElementById("headerTable").rows[0];
-var menu = firstRow.insertCell(-1);
-menu.innerHTML = '<a href="mMain.html"> mMain </a> &gt&gt cInfo016AppMap';
-where a link must contain an '&' enter it as &amp; otherwise HTML validators may
-show an error
-*/
- 
-}
-
-
-</script>
 
 
 </head>
 
-<body onload="pageStart();">
+<body>
 
 <!-- sections standard indent is 2 or 4 spaces where possible for readability, one line between sections -->
 
@@ -70,7 +41,7 @@ show an error
 <header>
 <table class="HeaderLive">
   <tr>
-    <td style="width:60%">Astrolab Data Menu</td>
+    <td style="width:60%">Misc. Menu</td>
     <td style="width:40%" id="menuCell">
 		<nav>
                 <button class="mnubutton2" type="button" onClick="location.href='mMain.html'" >Main Menu</button>
@@ -90,7 +61,7 @@ show an error
 
 <div id="tabs" style="width:33%">
 	<ul>
-		<li><a href="#tabs-1">Data</a></li>
+		<li><a href="#tabs-1">Misc</a></li>
 	
 	</ul>
     
@@ -101,16 +72,15 @@ show an error
   <tr>
     <td style="width:33%;"><br>
 		<br />
-        <b>Misc</b><br/>
-<br />
 
   <button class="mnubutton1" type="button" onclick="location.href='fAbout.html'">About</button><br/>
   <button class="mnubutton1" type="button" onClick="location.href='mMainAppMap.html'">Astrolab App Map</button><br/>
   <button class="mnubutton1" type="button" onClick="location.href='cDocuments/AstrolabUserGuide.pdf'">User Guide (PDF)</button><br/>
-
+<br/>
     </td>
   </tr>
 </table>
+	
 <br/>
 </div>
 </div>
@@ -127,7 +97,7 @@ show an error
         </script>
       </td>
       <td style="width:50%"></td>
-      <td style="width:25%">mMainData</td>
+      <td style="width:25%">mMainMisc</td>
     </tr>
   </table>
 </footer>
