--- a/cDataSolarSystem/cData010Sun/cData010Sun.html
+++ b/cDataSolarSystem/cData010Sun/cData010Sun.html
@@ -19,6 +19,8 @@
 								   
 <!-- Above is Standard Header For All Application Pages -->
 
+<!-- Page Specific environment -->
+
 </head>
 <body>
 <!-- sections standard indent is 2 or 4 spaces where possible for readability, one line between sections -->
