--- a/mMainSolarSystemData.html
+++ b/mMainSolarSystemData.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="Description" content="Astrophysics Tools" />
-<meta name="Keywords" content="Astronomy, Cosmology, Astrophysics" />
-<meta name="Author" content="Alchymist" />
 
-
-<title>COS Astrolab Main Menu ------------ [mMain]</title>
+<title>Solar System Data Main Menu ------------ [mMainSolarSystemData]</title>
 
 <!-- Load common environment -->
+	
 <script src="fJscriptLib/jquery.js"></script>
 <script src="fJscriptLib/jquery-ui/jquery-ui.js"></script>
 
@@ -23,6 +20,7 @@
 <!-- Above is Standard Header For All Application Pages -->
 
 <!-- Page Specific environment -->
+	
 <script>
 $( function() {
     $( ".widget input[type=submit], .widget a, .widget button" ).button();
@@ -31,23 +29,11 @@ $( function() {
     } );
   } );
 </script>
-<script> 
-
-
-function pageStart() {
-
-
-
-}
-
-
-
-</script>
 
 
 </head>
 
-<body onload="pageStart();">
+<body>
 
 <!-- sections standard indent is 2 or 4 spaces where possible for readability, one line between sections -->
 
