--- a/cInfo/cInfo018StdUnits.html
+++ b/cInfo/cInfo018StdUnits.html
@@ -53,12 +53,10 @@
 		<li><a href="#tabs-2">Derived Units</a></li>
 		<li><a href="#tabs-3">Other Quantities and Units</a></li>
         <li><a href="#tabs-4">Non-SI Units Accepted</a></li>
-   		<li><a href="#tabs-5">Credits</a></li>
 	</ul>
     
 <div id="tabs-1">
 
-    <b><font size="4">Units of Measurement</font></b>
     <br/>
    Where ever possible we will be using standard units in this 
           project as described below.&nbsp; Standard symbols to 
@@ -76,8 +74,8 @@
           In addition to the SI units there is also a set of non-SI 
           units accepted for use with SI.<br />
           <br />
-          For information check the National Physical Laboratory definitions page <a href="http://www.npl.co.uk/server.php?show=nav.364">Measurement Units</a><br />
-          <table id="table9">
+          For information check the National Physical Laboratory definitions page <a href="http://www.npl.co.uk/server.php?show=nav.364">Measurement Units</a><br /><br/>
+          <table class="InformationTable1" id="table9">
             <caption>
             <b>SI base units</b>
             </caption>
@@ -129,7 +127,7 @@
             there are one thousand millimetres to the metre and one 
             thousand metres to the kilometre. The prefixes are never 
             combined: a millionth of a kilogram is a <i>milligram</i> not a <i>microkilogram</i>.</p>
-          <table id="table10">
+          <table class="InformationTable1" id="table10">
             <caption>
             <br/>
             <b><font size="2">Standard prefixes for the SI units of measure</font></b><br/>
@@ -178,13 +176,13 @@
               <td><font size="2">10</font><sup><font size="2">24</font></sup></td>
             </tr>
             <tr>
-              <th colspan="12">&nbsp;</th>
+              <td colspan="13">&nbsp;</td>
             </tr>
             <tr>
               <th rowspan="3"><font size="2">Subdivisions</font></th>
               <th><font size="2">Name</font></th>
               <th>&nbsp;</th>
-              <th><font size="2">deci-</font></th>
+              <th>deci-</th>
               <th><font size="2">centi-</font></th>
               <th><font size="2">milli-</font></th>
               <th><font size="2">micro-</font></th>
@@ -758,23 +756,6 @@ Base units can be put together to derive units of
           <br/>
 </div>
         
-<div id="tabs-5">
-<br/>
-<span style="font-size: 12.0pt; font-family: Arial; font-weight: 700" lang="en" xml:lang="en"> Recommended Values of the Fundamental Constants</span>
-<p style=" background: white"> <span style="font-family:Arial">Values for constants in calculations follow 
-  standards recommended by the National Physical Laboratory (<a style="text-decoration: none; text-underline: none; text-line-through: none" href="http://www.npl.co.uk/">www.npl.co.uk</a>) 
-  and </span><span style="font-family: Arial; color: black" lang="en" xml:lang="en"><strong> <span style="font-family:
-Arial"> <a style="text-decoration: none; text-underline: none; text-line-through: none" href="http://www.kayelaby.npl.co.uk/"> <font size="2">Kaye &amp; Laby Online is a valuable resource.</font></a></span></strong></span><font face="Arial"><br />
-  </font><span style="font-family:Arial"><br />
-  These are sourced from CODATA Task Group on Fundamental Constants (<strong><i><span style="font-family: Arial">Committee 
-  on Data for Science and Technology)</span></i></strong></span></p>
-<p class="MsoNormal"><strong> <span style="font-family: Arial; font-weight: normal">The latest values are 
-  available from the </span></strong> <span style="font-family: Arial; color: black" lang="en" xml:lang="en"> <a style="text-decoration: none; text-underline: none; text-line-through: none" href="http://physics.nist.gov/cuu/Constants/index.html"> <font size="2">CODATA fundamental constants page</font></a><font size="2"> at 
-  the American </font></span><span style="font-size:10.0pt;
-font-family:Arial"> <a style="text-decoration: none; text-underline: none; text-line-through: none" href="http://www.nist.gov"> National Institute of Standards and Technology&#39;s web site</a> (NIST)</span></p>
-
-
-</div>
 
 </div>
 <br/>
